enter blank space fix + spacing fix

--- a/webapp/src/app/views/discussion-view/discussion-view.component.scss
+++ b/webapp/src/app/views/discussion-view/discussion-view.component.scss
@@ -16,7 +16,6 @@
     #messages {
         flex-direction: column-reverse;
         padding-top: var(--large-spacing);
-        padding-bottom: var(--spacing);
         min-height: 100vh;
 
         app-message {
